# get-my-sport-automation

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/: app.py  backend.py  prompts.py
